--- a/calculus/common_math_symbols.ipynb
+++ b/calculus/common_math_symbols.ipynb
@@ -3,10 +3,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "https://www.math.ucdavis.edu/~anne/WQ2007/mat67-Common_Math_Symbols.pdf\n",
-    "Some Common Mathematical Symbols\n",
-    "and Abbreviations (with History)\n",
-    "Isaiah Lankham, Bruno Nachtergaele, Anne Schilling\n",
+    "https://www.math.ucdavis.edu/~anne/WQ2007/mat67-Common_Math_Symbols.pdf <br>\n",
+    "Some Common Mathematical Symbols <br>\n",
+    "and Abbreviations (with History) <br>\n",
+    "Isaiah Lankham, Bruno Nachtergaele, Anne Schilling <br>\n",
     "(January 21, 2007)"
    ],
    "metadata": {
