adding Continuous Functions

--- a/calculus/limits_derivatives_functions.ipynb
+++ b/calculus/limits_derivatives_functions.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "source": [
     "**Sequential Criterion for Functional Limits**\n",
-    "Let $f: A \\rightarrow \\mathbf{R}$ and $c$ be a limit point of $\\(A\\)$. Then the following two conditions are equivalent:\n",
+    "Let $f: A \\rightarrow \\mathbf{R}$ and $c$ be a limit point of $A$. Then the following two conditions are equivalent:\n",
     "\n",
     "(i) $\\lim _{x \\rightarrow c} f(x)=L$.\n",
     "\n",
@@ -88,6 +88,61 @@
     "(ii) $f(x) g(x)$ is continuous at $c$;\n",
     "\n",
     "(iii) $f(x) / g(x)$ is continuous at c, provided the quotient is well defined. "
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Continuous Functions**\n",
+    "\n",
+    "(i) We say $f$ is continuous at a point $c \\in A$ if, for each $\\epsilon>0$, there exists a $\\delta>0$ such that whenever $|x-c|<\\delta$ and $x \\in A$ it follows that $|f(x)-f(c)|<\\epsilon$.\n",
+    "\n",
+    "If $f$ is not continuous at $c$ we say $f$ is discontinuous at $c$.\n",
+    "\n",
+    "(ii) We say $f$ is a continuous function on $A$ if it is continuous at every point in $A$.\n",
+    "\n",
+    "Note that continuity at $c$ is not defined if $f(c)$ is not defined, i.e., if $c \\notin A$. If $c \\in A$ is an isolated point of $A$, then $f$ is always continuous at $c$ since for some $\\delta>0$ the only point $x$ satisfying $|x-c|<\\delta$ and $x \\in A$ is $x=c$ and hence the condition $|f(x)-f(c)|=0<\\epsilon$ always holds. If $c \\in A$ is a limit point of $A$, then continuity of $f$ at $c$ is simply equivalent to\n",
+    "\n",
+    "$\\lim _{x \\rightarrow c} f(x)=f(c)$.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Characterizations of Continuity**\n",
+    "\n",
+    "Let $f: A \\rightarrow \\mathbf{R}$ and $c \\in A$ be a limit point of $A$. Then the following conditions are equivalent:\n",
+    "\n",
+    "(i) $f$ is continuous at c.\n",
+    "\n",
+    "(ii) $\\lim _{x \\rightarrow c} f(x)=f(c)$.\n",
+    "\n",
+    "(iii) $\\forall \\epsilon>0 \\exists \\delta>0, \\quad f\\left(V_{\\delta}(c) \\cap A\\right) \\subseteq V_{\\epsilon}(f(c))$.\n",
+    "\n",
+    "(iv) Whenever $x_{n} \\in A$ and $\\left(x_{n}\\right) \\rightarrow c$ it follows that $\\left(f\\left(x_{n}\\right)\\right) \\rightarrow f(c)$."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Algebraic Continuity Theorem**\n",
+    "\n",
+    "Let $f, g: A \\rightarrow \\mathbf{R}$ be continuous at a point $c \\in A$. Then\n",
+    "\n",
+    "(i) af $(x)+b g(x)$ is continuous at c for all $a, b \\in \\mathbf{R}$;\n",
+    "\n",
+    "(ii) $f(x) g(x)$ is continuous at $c$;\n",
+    "\n",
+    "(iii) $f(x) / g(x)$ is continuous at c, provided the quotient is well defined."
    ],
    "metadata": {
     "collapsed": false
