adding derivatives and beggining of local maxima, minima and inflections points

--- a/calculus/limits_derivatives_functions.ipynb
+++ b/calculus/limits_derivatives_functions.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "source": [
     "https://users.math.msu.edu/users/yanb/320ch4.pdf  <br>\n",
-    "Shagnik Das: <br> http://page.mi.fu-berlin.de/shagnik/notes/continuity.pdf <br>\n"
+    "Shagnik Das: <br> http://page.mi.fu-berlin.de/shagnik/notes/continuity.pdf <br>\n",
+    "https://math.libretexts.org/Under_Construction/Purgatory/Book%3A_Active_Calculus_(Boelkins_et_al.)/01%3A_Understanding_the_Derivative/1.03%3A_The_Derivative_of_a_Function_at_a_Point <br>\n",
+    "https://www.cuemath.com/calculus/differentiable/ <br>\n",
+    "http://homepages.math.uic.edu/~leon/math180-r07/handouts/Local%20Maxima.pdf <br>\n"
    ],
    "metadata": {
     "collapsed": false
@@ -159,7 +162,79 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "**Derivative Definition**\n",
+    "\n",
+    "Let $f$ be a function and $x = a$ a value in the function's domain. We define the derivative of $f$ with respect to $x$ evaluated at $x = a$, denoted $f'(a)$, by the formula <br>\n",
+    "$f'(a)= \\lim _{h \\rightarrow 0} \\frac{f(a+h) - f(a)}{h}$"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Differentiability Definition**\n",
+    "\n",
+    "A function is said to be differentiable if the derivative of the function exists at all points in its domain. Particularly, if a function $f(x)$ is differentiable at $x = a$, then $f′(a)$ exists in the domain."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**The table of derivatives**\n",
+    "\n",
+    "$y = f(x) \\to \\frac{dy}{dx} = f'(x)$\n",
+    "$c'=0$, where $c \\in \\mathbf{R}$\n",
+    "$(x^n)' = nx^{n-1}$, where $n \\in \\mathbf{R}$\n",
+    "$(\\log_a x)\\ = \\frac{1}{x \\ln a}$, $(\\ln x)'=\\frac{1}{x}$\n",
+    "$(\\sin x)' = \\cos x$\n",
+    "$(\\cos x)' = -\\sin x$\n",
+    "$(\\tan x)' = \\frac{1}{\\cos^2 x}$\n",
+    "$(\\cot x)' = -\\frac{1}{\\sin^2 x}$"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Properties of the Derivative**\n",
+    "Let $G$ be an open subset of $\\mathbf{R}$ and let $f$, $g$ : $G \\to \\mathbf{R}$. Suppose both $f$ and $g$ are differentiable at $a \\in G$. Then the following hold.\n",
+    "a. The function $f+g$ is differnetiable at $a$ and\n",
+    "$(f+g)′(a)=f′(a)+g′(a)$.\n",
+    "b. For a constant $c$, the function $cf$ is differentiable at $a$ and\n",
+    "$(cf)′(a)=cf′(a)$.\n",
+    "c. The function $fg$ is differentiable at $a$ and\n",
+    "$(fg)′(a)=f′(a)g(a)+f(a)g′(a)$.\n",
+    "d. Suppose additionally that $g(a) \\neq 0$. Then the function $\\frac{f}{g}$ is differentiable at a and\n",
+    "$\\bigg(\\frac{f}{g}\\bigg)'(a)=\\frac{f'(a)g(a) - f(a)g'(a)}{(g(a))^2}$."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Chain Rule**\n",
+    "Let $f:G_1 \\to \\mathbf{R}$ and let $g:G_2 \\to \\mathbf{R}$, where $G_1$ and $G_2$ are two open subsets or $\\mathbf{R}$ with $f(G_1) \\subset G_2$. Suppose $f$ is differenetiable at $a$ and $g$ is differentiable at $f(a)$. Then the function $g \\circ f$ is differentiable at $a$ and\n",
+    "$(g \\circ f)'(a) = g'(f(a))f'(a)$."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Local Maxima, Local Minima, and Inflection Points**"
+   ],
    "metadata": {
     "collapsed": false
    }
