add some part of info about Local Maxima, Local Mimima and Inflrection point

--- a/calculus/limits_derivatives_functions.ipynb
+++ b/calculus/limits_derivatives_functions.ipynb
@@ -2,28 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "https://users.math.msu.edu/users/yanb/320ch4.pdf  <br>\n",
     "Shagnik Das: <br> http://page.mi.fu-berlin.de/shagnik/notes/continuity.pdf <br>\n",
     "https://math.libretexts.org/Under_Construction/Purgatory/Book%3A_Active_Calculus_(Boelkins_et_al.)/01%3A_Understanding_the_Derivative/1.03%3A_The_Derivative_of_a_Function_at_a_Point <br>\n",
     "https://www.cuemath.com/calculus/differentiable/ <br>\n",
     "http://homepages.math.uic.edu/~leon/math180-r07/handouts/Local%20Maxima.pdf <br>\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### Limits of Functions and Continuous Functions"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "**Sequential Criterion for Functional Limits**\n",
     "Let $f: A \\rightarrow \\mathbf{R}$ and $c$ be a limit point of $A$. Then the following two conditions are equivalent:\n",
@@ -31,13 +34,13 @@
     "(i) $\\lim _{x \\rightarrow c} f(x)=L$.\n",
     "\n",
     "(ii) For all sequences $\\left(x_{n}\\right)$ satisfying $x_{n} \\in A, x_{n} \\neq c$ and $\\left(x_{n}\\right) \\rightarrow c$, it follows that the sequence $\\left(f\\left(x_{n}\\right)\\right) \\rightarrow L$"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "**Properties of limits for functions**\n",
     "\n",
@@ -51,13 +54,13 @@
     "(iii) $\\lim _{x \\rightarrow c}[f(x) / g(x)]=L / M$, provided $M \\neq 0$\n",
     "\n",
     "(iv) $\\lim _{x \\rightarrow c}[k \\cdot f(x) ]=L / M$, where k $\\in \\mathbf{R}$"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "**Continuous Functions**\n",
     "\n",
@@ -74,13 +77,13 @@
     "$\n",
     "\\lim _{x \\rightarrow c} f(x)=f(c) .\n",
     "$\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "**Algebraic Continuity Theorem.**\n",
     "\n",
@@ -91,13 +94,13 @@
     "(ii) $f(x) g(x)$ is continuous at $c$;\n",
     "\n",
     "(iii) $f(x) / g(x)$ is continuous at c, provided the quotient is well defined. "
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "**Continuous Functions**\n",
     "\n",
@@ -110,13 +113,13 @@
     "Note that continuity at $c$ is not defined if $f(c)$ is not defined, i.e., if $c \\notin A$. If $c \\in A$ is an isolated point of $A$, then $f$ is always continuous at $c$ since for some $\\delta>0$ the only point $x$ satisfying $|x-c|<\\delta$ and $x \\in A$ is $x=c$ and hence the condition $|f(x)-f(c)|=0<\\epsilon$ always holds. If $c \\in A$ is a limit point of $A$, then continuity of $f$ at $c$ is simply equivalent to\n",
     "\n",
     "$\\lim _{x \\rightarrow c} f(x)=f(c)$.\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "**Characterizations of Continuity**\n",
     "\n",
@@ -129,13 +132,13 @@
     "(iii) $\\forall \\epsilon>0 \\exists \\delta>0, \\quad f\\left(V_{\\delta}(c) \\cap A\\right) \\subseteq V_{\\epsilon}(f(c))$.\n",
     "\n",
     "(iv) Whenever $x_{n} \\in A$ and $\\left(x_{n}\\right) \\rightarrow c$ it follows that $\\left(f\\left(x_{n}\\right)\\right) \\rightarrow f(c)$."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "**Algebraic Continuity Theorem**\n",
     "\n",
@@ -146,45 +149,45 @@
     "(ii) $f(x) g(x)$ is continuous at $c$;\n",
     "\n",
     "(iii) $f(x) / g(x)$ is continuous at c, provided the quotient is well defined."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### Derivative"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "**Derivative Definition**\n",
     "\n",
     "Let $f$ be a function and $x = a$ a value in the function's domain. We define the derivative of $f$ with respect to $x$ evaluated at $x = a$, denoted $f'(a)$, by the formula <br>\n",
     "$f'(a)= \\lim _{h \\rightarrow 0} \\frac{f(a+h) - f(a)}{h}$"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "**Differentiability Definition**\n",
     "\n",
     "A function is said to be differentiable if the derivative of the function exists at all points in its domain. Particularly, if a function $f(x)$ is differentiable at $x = a$, then $f′(a)$ exists in the domain."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "**The table of derivatives**\n",
     "\n",
@@ -196,13 +199,13 @@
     "$(\\cos x)' = -\\sin x$\n",
     "$(\\tan x)' = \\frac{1}{\\cos^2 x}$\n",
     "$(\\cot x)' = -\\frac{1}{\\sin^2 x}$"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "**Properties of the Derivative**\n",
     "Let $G$ be an open subset of $\\mathbf{R}$ and let $f$, $g$ : $G \\to \\mathbf{R}$. Suppose both $f$ and $g$ are differentiable at $a \\in G$. Then the following hold.\n",
@@ -214,30 +217,41 @@
     "$(fg)′(a)=f′(a)g(a)+f(a)g′(a)$.\n",
     "d. Suppose additionally that $g(a) \\neq 0$. Then the function $\\frac{f}{g}$ is differentiable at a and\n",
     "$\\bigg(\\frac{f}{g}\\bigg)'(a)=\\frac{f'(a)g(a) - f(a)g'(a)}{(g(a))^2}$."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "**Chain Rule**\n",
     "Let $f:G_1 \\to \\mathbf{R}$ and let $g:G_2 \\to \\mathbf{R}$, where $G_1$ and $G_2$ are two open subsets or $\\mathbf{R}$ with $f(G_1) \\subset G_2$. Suppose $f$ is differenetiable at $a$ and $g$ is differentiable at $f(a)$. Then the function $g \\circ f$ is differentiable at $a$ and\n",
     "$(g \\circ f)'(a) = g'(f(a))f'(a)$."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "**Local Maxima, Local Minima, and Inflection Points**"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "**Local Maxima, Local Minima and Inflection Points**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let $f$ be a function defined on an interval $[a, b]$ or $(a, b)$, and let $p$ be a point in $(a, b)$, i.e., not an endpoint, if the interval is closed.\n",
+    "- $f$ has a local minimum at $p$ if $f(p) \\leq f(x)$ for all $x$ in a small interval around $p$.\n",
+    "- $f$ has a local maximum at $p$ if $f(p) \\geq f(x)$ for all $x$ in a small interval around $p$.\n",
+    "- $f$ has an inflection point at $p$ if the concavity of $f$ changes at $p$, i.e. if $f$ is concave down on one side of $p$ and concave up on another.\n",
+    "\n",
+    "We assume that $f^{\\prime}(p)=0$ is only at isolated points - not everywhere on some interval. This makes things simpler, as then the three terms defined above are mutually exclusive.\n",
+    "\n",
+    "The results in the tables below require that $f$ is differentiable at $p$, and possibly in some small interval around $p$. Some of them require that $f$ be twice differentiable."
+   ]
   }
  ],
  "metadata": {
