add the final part of info about Local Maxima, Local Mimima and Inflection point

--- a/calculus/limits_derivatives_functions.ipynb
+++ b/calculus/limits_derivatives_functions.ipynb
@@ -250,7 +250,57 @@
     "\n",
     "We assume that $f^{\\prime}(p)=0$ is only at isolated points - not everywhere on some interval. This makes things simpler, as then the three terms defined above are mutually exclusive.\n",
     "\n",
-    "The results in the tables below require that $f$ is differentiable at $p$, and possibly in some small interval around $p$. Some of them require that $f$ be twice differentiable."
+    "The results in the tables below require that $f$ is differentiable at $p$, and possibly in some small interval around $p$. Some of them require that $f$ be twice differentiable.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Table 1: Information about $f$ at $p$ from the first and second derivatives at $p$\n",
+    "\n",
+    "| $f^{\\prime}(p)$ | $f^{\\prime \\prime}(p)$ | At $p, f$ has a | Examples |\n",
+    "| :---: | :---: | :---: | :---: |\n",
+    "| 0 | positive | local minimum | $f(x)=x^{2}, p=0$. |\n",
+    "| 0 | negative | local maximum | $f(x)=1-x^{2}, p=0$. |\n",
+    "| 0 | 0 | local minimum, local <br> maximum, or inflection <br> point | $f(x)=x^{4}, p=0$. $[\\min ]$ <br> $f(x)=1-x^{4}, p=0$. $[\\max ]$ <br> $f(x)=x^{3}, p=0$. $[$ inf pt $]$ |\n",
+    "| nonzero | 0 | possible inflection point | $f(x)=\\tan (x), p=0$. $[$ yes $]$ <br> $f(x)=x^{4}+x, p=0$. $[$ no $]$ |\n",
+    "| nonzero | nonzero | none of the above |  |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the ambiguous cases above, we may look at the higher derivatives. For example, if $f^{\\prime}(p)=f^{\\prime \\prime}(p)=0$, then\n",
+    "\n",
+    "- If $f^{(3)}(p) \\neq 0$, then $f$ has an inflection point at $p$.\n",
+    "- Otherwise, if $f^{(4)}(p) \\neq 0$, then $f$ has a local minimum at $p$ if $f^{(4)}(p)>0$ and a local maximum if $f^{(4)}(p)<0$.\n",
+    "\n",
+    "An alternative is to look at the first (and possibly second) derivative of $f$ in some small interval around $p$. This interval may be as small as we wish, as long as its size is greater than 0."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Table 2: Information about $f$ at $p$ from the first and second derivatives in a small interval around $p$\n",
+    "| $\\boldsymbol{f}^{\\prime}(\\boldsymbol{p})$ | Change in $\\boldsymbol{f}^{\\prime}(\\boldsymbol{x})$ as $\\boldsymbol{x}$ moves <br> from left to right of $\\boldsymbol{p}$ | At $\\boldsymbol{p}, \\boldsymbol{f}$ has a__ |\n",
+    "| :---: | :--- | :--- |\n",
+    "| 0 | $f^{\\prime}(x)$ changes from negative <br> to positive at $p$ | Local minimum |\n",
+    "| 0 | $f^{\\prime}(x)$ changes from positive to <br> negative at $p$ | Local maximum |\n",
+    "| 0 | $f^{\\prime}(x)$ has the same sign on <br> both sides of $p$. <br> $\\left(\\right.$ Implies $\\left.f^{\\prime \\prime}(p)=0.\\right)$ | Inflection point |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| $f^{\\prime}(\\boldsymbol{p})$ | $\\boldsymbol{f}^{\\prime \\prime}(\\boldsymbol{p})$ | Change in $\\boldsymbol{f}^{\\prime \\prime}(\\boldsymbol{x})$ as $\\boldsymbol{x}$ moves <br> from left to right of $\\boldsymbol{p}$ | At $\\boldsymbol{p}, \\boldsymbol{f}$ has a |\n",
+    "| :---: | :---: | :--- | :--- |\n",
+    "| nonzero | 0 | $f^{\\prime \\prime}(x)$ changes sign at $p$. | Inflection point |\n",
+    "| nonzero | 0 | $f^{\\prime \\prime}(x)$ has the same sign on <br> both sides of $p$. | None of the above. <br> (However, $f^{\\prime}$ has an <br> inflection point at p. $)$ |"
    ]
   }
  ],
