add new info to Gradient Descent about distances and vectors

--- a/calculus/gradient_descent.ipynb
+++ b/calculus/gradient_descent.ipynb
@@ -25,8 +25,8 @@
    "metadata": {},
    "source": [
     "**$\\mathbb{R}$: distances and vectors**  \n",
-    "$\\mathbb{R}$ - is a set of ordered arrays $(x_1, x_2,...,x_n)$ , such as $\\forall \\ i : x_i \\in \\mathbb{R}$. Each of this array is called $point \\ in \\ \\mathbb{R}$.\n",
-    "We call $f$ as $a \\ function \\ of \\ many \\ variables$, if $f$ "
+    "$\\mathbb{R^n}$ - is a set of ordered arrays $(x_1, x_2,...,x_n)$ , such as $\\forall \\ i : x_i \\in \\mathbb{R}$. Each of this array is called $point \\ in \\ \\mathbb{R^n}$.\n",
+    "We call $f$ as $a \\ function \\ of \\ many \\ variables$, if $f$ maps $D$ to $\\mathbb{R}$, where $D \\in \\mathbb{R^n}$ for some $n$. In other words, domain of the function $f$ must be subset of $\\mathbb{R^n}$ and codomain of the function $f$ is subser of $\\mathbb{R}$."
    ]
   },
   {
