--- a/calculus/gradient_descent.ipynb
+++ b/calculus/gradient_descent.ipynb
@@ -26,7 +26,9 @@
    "source": [
     "**$\\mathbb{R}$: distances and vectors**  \n",
     "$\\mathbb{R^n}$ - is a set of ordered arrays $(x_1, x_2,...,x_n)$ , such as $\\forall \\ i : x_i \\in \\mathbb{R}$. Each of this array is called $point \\ in \\ \\mathbb{R^n}$.\n",
-    "We call $f$ as $a \\ function \\ of \\ many \\ variables$, if $f$ maps $D$ to $\\mathbb{R}$, where $D \\in \\mathbb{R^n}$ for some $n$. In other words, domain of the function $f$ must be subset of $\\mathbb{R^n}$ and codomain of the function $f$ is subser of $\\mathbb{R}$."
+    "We call $f$ as $a \\ function \\ of \\ many \\ variables$, if $f$ maps $D$ to $\\mathbb{R}$, where $D \\subset \\mathbb{R^n}$ for some $n$. In other words, domain of the function $f$ must be subset of $\\mathbb{R^n}$ and codomain of the function $f$ is subset of $\\mathbb{R}$.  \n",
+    "$Euclidean\\ Distance$ between points $a=(a_1,...,a_n) \\in \\mathbb{R^n}$ and $b=(b_1,...,b_n) \\in \\mathbb{R^n}$ is defined as  \n",
+    "$d(a,b):=\\sqrt{(a_1-b_1)^2+(a_2-b_2)^2+\\cdots +(a_1-b_1)^n}$."
    ]
   },
   {
