--- a/calculus/gradient_descent.ipynb
+++ b/calculus/gradient_descent.ipynb
@@ -29,19 +29,19 @@
     "We call $f$ as $a \\ function \\ of \\ many \\ variables$, if $f$ maps $D$ to $\\mathbb{R}$, where $D \\subset \\mathbb{R^n}$ for some $n$. In other words, domain of the function $f$ must be subset of $\\mathbb{R^n}$ and codomain of the function $f$ is subset of $\\mathbb{R}$.  \n",
     "$Euclidean\\ Distance$ between points $a=(a_1,...,a_n) \\in \\mathbb{R^n}$ and $b=(b_1,...,b_n) \\in \\mathbb{R^n}$ is defined as  \n",
     "$d(a,b):=\\sqrt{(a_1-b_1)^2+(a_2-b_2)^2+\\cdots +(a_1-b_1)^n}$.  \n",
-    "A point $a \\in \\mathbb{R^n}$ is called $the\\ limit\\ of\\ sequence\\ {x_i}$, where $x_i \\in \\mathbb{R^n}$, if for any $\\epsilon > 0$ there will always exist natural number $N$, such that $d(x_i, a) < \\epsilon$ for all $i \\geqslant N$ (i.e. are in \\epsilon neighbourhood the point $a$ when $i \\geqslant N$)."
+    "A point $a \\in \\mathbb{R^n}$ is called $the\\ limit\\ of\\ sequence\\ {x_i}$, where $x_i \\in \\mathbb{R^n}$, if for any $\\epsilon > 0$ there will always exist natural number $N$, such that $d(x_i, a) < \\epsilon$ for all $i \\geqslant N$ (i.e. are in \\epsilon neighbourhood the point $a$ when $i \\geqslant N$).  \n",
+    "The unformal definition of $a vector space$:\n",
+    "• All the elements $\\mathbb{R^n}$ are called vectors and the set $\\mathbb{R^n}$ is called the vector space.  \n",
+    "• Vectors can be added to each other. The result of this addition is a vector from the same vector space.  \n",
+    "In the common case the addition of the vectors $(a_1, a_2,...,a_n),(b_1,b_2,...,b_n)\\in \\mathbb{R^n}$ is defined as:  \n",
+    "$(a_1, a_2,...,a_n)+(b_1, b_2,...,b_n)=(a_1+b_1, a_2+b_2,...,a_n+b_n)\\in \\mathbb{R^n}$.  \n",
+    "• Also vectors can be multiplied with numbers.  \n",
+    "In the common case the multiplication of a vector $(a_1, a_2,...,a_n)\\in \\mathbb{R^n}$ and a is defined as:  \n",
+    "$c(a_1,a_2,...,a_n)=(ca_1,ca_2,...,ca_n)\\in \\mathbb{R^n}$.  \n",
+    "Sometimes we call elements from $\\mathbb{R^n}$ as points and sometimes as vectors.  \n",
+    "$The length of the vector$ $x={x_1, x_2, ..., x_n}$ is defined as:  \n",
+    "$||x||=\\sqrt{x_1^2+x_2^2+\\cdots +x_n^2}$"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
