adding the first notes about Differential

--- a/calculus/gradient_descent.ipynb
+++ b/calculus/gradient_descent.ipynb
@@ -39,8 +39,18 @@
     "In the common case the multiplication of a vector $(a_1, a_2,...,a_n)\\in \\mathbb{R^n}$ and a is defined as:  \n",
     "$c(a_1,a_2,...,a_n)=(ca_1,ca_2,...,ca_n)\\in \\mathbb{R^n}$.  \n",
     "Sometimes we call elements from $\\mathbb{R^n}$ as points and sometimes as vectors.  \n",
-    "$The length of the vector$ $x={x_1, x_2, ..., x_n}$ is defined as:  \n",
+    "$The\\ length\\ of\\ the\\ vector$ $x={x_1, x_2, ..., x_n}$ is defined as:  \n",
     "$||x||=\\sqrt{x_1^2+x_2^2+\\cdots +x_n^2}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Differential**  \n",
+    "• The functions of the form $a_1\\Delta x_1+\\cdots +a_n\\Delta x_n$ are called $linear functions$ from ($\\Delta x_1,...,\\Delta x_n$)  \n",
+    "• The equation $a_1(\\Delta x_1+\\cdots + a_n\\Delta)$ is called the linear increment of function $f1$.  \n",
+    "• The function $g(x_1+\\Delta x1,...,x_n+\\Delta x_n)=f(x_1,...,x_n)+a_1\\Delta x_1 +\\cdots +a_n \\Delta x_n$ is called $linear approximation$ of function $f$ in the point $x$."
    ]
   }
  ],
