adding notes about Differential

--- a/calculus/gradient_descent.ipynb
+++ b/calculus/gradient_descent.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**One-dimensional Gradient Descent**\n",
+    "### One-dimensional Gradient Descent\n",
     "\n",
     "To find the minimum of differentiable function $f : [a, b] \\rightarrow \\mathbb{R}$ we can use the following **One-dimensional $Gradient$ $Descent$ Algorithm **\n",
     "\n",
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**$\\mathbb{R}$: distances and vectors**  \n",
+    "### $\\mathbb{R}$: distances and vectors\n",
     "$\\mathbb{R^n}$ - is a set of ordered arrays $(x_1, x_2,...,x_n)$ , such as $\\forall \\ i : x_i \\in \\mathbb{R}$. Each of this array is called $point \\ in \\ \\mathbb{R^n}$.\n",
     "We call $f$ as $a \\ function \\ of \\ many \\ variables$, if $f$ maps $D$ to $\\mathbb{R}$, where $D \\subset \\mathbb{R^n}$ for some $n$. In other words, domain of the function $f$ must be subset of $\\mathbb{R^n}$ and codomain of the function $f$ is subset of $\\mathbb{R}$.  \n",
     "$Euclidean\\ Distance$ between points $a=(a_1,...,a_n) \\in \\mathbb{R^n}$ and $b=(b_1,...,b_n) \\in \\mathbb{R^n}$ is defined as  \n",
@@ -47,10 +47,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Differential**  \n",
+    "### Differential  \n",
     "• The functions of the form $a_1\\Delta x_1+\\cdots +a_n\\Delta x_n$ are called $linear functions$ from ($\\Delta x_1,...,\\Delta x_n$)  \n",
     "• The equation $a_1(\\Delta x_1+\\cdots + a_n\\Delta)$ is called the linear increment of function $f1$.  \n",
-    "• The function $g(x_1+\\Delta x1,...,x_n+\\Delta x_n)=f(x_1,...,x_n)+a_1\\Delta x_1 +\\cdots +a_n \\Delta x_n$ is called $linear approximation$ of function $f$ in the point $x$."
+    "• The function $g(x_1+\\Delta x1,...,x_n+\\Delta x_n)=f(x_1,...,x_n)+a_1\\Delta x_1 +\\cdots +a_n \\Delta x_n$ is called $linear approximation$ of function $f$ in the point $x$.  \n",
+    "\n",
+    "**The unformal definition of Differential**  \n",
+    "$f(x_1+\\Delta x_1,...,x_n+\\Delta x_n)-f(x_1,...,x_n)\\approx d_xf(\\Delta x_1,...,\\Delta x_n):=a_1\\Delta x_1+\\cdots +a_n\\Delta x_n$\n",
+    "\n",
+    "In common case the coefficients a_1,...,a_n depend on the chosen point $x=(x_1,...,x_n)$"
    ]
   }
  ],
