adding notes about Differential

--- a/calculus/gradient_descent.ipynb
+++ b/calculus/gradient_descent.ipynb
@@ -55,7 +55,16 @@
     "**The unformal definition of Differential**  \n",
     "$f(x_1+\\Delta x_1,...,x_n+\\Delta x_n)-f(x_1,...,x_n)\\approx d_xf(\\Delta x_1,...,\\Delta x_n):=a_1\\Delta x_1+\\cdots +a_n\\Delta x_n$\n",
     "\n",
-    "In common case the coefficients a_1,...,a_n depend on the chosen point $x=(x_1,...,x_n)$"
+    "In common case the coefficients a_1,...,a_n depend on the chosen point $x=(x_1,...,x_n)$\n",
+    "\n",
+    "**The formal definition of Differential**  \n",
+    "Let the function $f$ is a function from many variables. The function $d_{x} f\\left(\\Delta x_{1}, \\ldots, \\Delta x_{n}\\right):=$ $a_{1} \\Delta x_{1}+\\cdots+a_{n} \\Delta x_{n}$ is called Differential from function $f$ in the point $x=(x_1,...,x_n), if the following limit exists and is equal to zero:  \n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\lim _{\\left(\\Delta x_{1}, \\ldots, \\Delta x_{n}\\right) \\rightarrow(0, \\ldots, 0)} & \\frac{f\\left(x_{1}+\\Delta x_{1}, \\ldots, x_{n}+\\Delta x_{n}\\right)-\\left(f(x)+a_{1} \\Delta x_{1}+\\cdots+a_{n} \\Delta x_{n}\\right)}{\\left\\|\\left(\\Delta x_{1}, \\ldots, \\Delta x_{n}\\right)\\right\\|}:= \\\\\n",
+    "& :=\\lim _{\\left(\\Delta x_{1}, \\ldots, \\Delta x_{n}\\right) \\rightarrow(0, \\ldots, 0)} \\frac{f\\left(x_{1}+\\Delta x_{1}, \\ldots, x_{n}+\\Delta x_{n}\\right)-\\left(f(x)+d_{x} f\\left(\\Delta x_{1}, \\ldots, \\Delta x_{n}\\right)\\right)}{\\left\\|\\left(\\Delta x_{1}, \\ldots, \\Delta x_{n}\\right)\\right\\|}=0\n",
+    "\\end{aligned}\n",
+    "$$\n"
    ]
   }
  ],
