--- a/calculus/gradient_descent.ipynb
+++ b/calculus/gradient_descent.ipynb
@@ -68,7 +68,7 @@
     "$\n",
     "\n",
     "Where $x, \\Delta x$ and $(x+\\Delta x)$ are vectors from $n$ variables. 0 in the equation $\\lim _{\\Delta x \\rightarrow 0}$ is a shorthand notation of the vector (0,...,0). 0 in the right part of the equation is a simple variable $0 \\in R$ (not a vector).  \n",
-    "If there is a Differential in the point $x$ for function $f$, then the function is called $differentiable at point x$.  \n",
+    "If there is a Differential in the point $x$ for function $f$, then the function is called $differentiable\\ at\\ point\\ x$.  \n",
     "The function $f$ is called $differentiable$, if it is differentiable in the all points of its domain of definition."
    ]
   }
