add the part of properties of Differential

--- a/calculus/gradient_descent.ipynb
+++ b/calculus/gradient_descent.ipynb
@@ -69,7 +69,14 @@
     "\n",
     "Where $x, \\Delta x$ and $(x+\\Delta x)$ are vectors from $n$ variables. 0 in the equation $\\lim _{\\Delta x \\rightarrow 0}$ is a shorthand notation of the vector (0,...,0). 0 in the right part of the equation is a simple variable $0 \\in R$ (not a vector).  \n",
     "If there is a Differential in the point $x$ for function $f$, then the function is called $differentiable\\ at\\ point\\ x$.  \n",
-    "The function $f$ is called $differentiable$, if it is differentiable in the all points of its domain of definition."
+    "The function $f$ is called $differentiable$, if it is differentiable in the all points of its domain of definition.\n",
+    "**Properties of Differentials**  \n",
+    "1. uniqueness of the Differential.  \n",
+    "Let the function $f$ is a function from many variables. If there is Differential of the function $f$ in the point $x$, then the Differential is unique.  \n",
+    "2. Let $f$ is differentiable in the point $x$. Then for any number $c \\in R$ the function $f$ is differentiable in the point $x$, and  \n",
+    "$d_{x}(c f)=c \\cdot d_{x} f$  \n",
+    "3. Differential of a sum. Let $f$ and $g$ are differentiable in the point $x$. Then the function $f+g$ are differentiable in the point $x$, and   \n",
+    "$d_{x}(f+g)=d_{x} f+d_{x} g$"
    ]
   }
  ],
