add the final part  of Differential

--- a/calculus/gradient_descent.ipynb
+++ b/calculus/gradient_descent.ipynb
@@ -71,12 +71,28 @@
     "If there is a Differential in the point $x$ for function $f$, then the function is called $differentiable\\ at\\ point\\ x$.  \n",
     "The function $f$ is called $differentiable$, if it is differentiable in the all points of its domain of definition.\n",
     "**Properties of Differentials**  \n",
-    "1. uniqueness of the Differential.  \n",
+    "1. **Uniqueness of the Differential.**  \n",
     "Let the function $f$ is a function from many variables. If there is Differential of the function $f$ in the point $x$, then the Differential is unique.  \n",
-    "2. Let $f$ is differentiable in the point $x$. Then for any number $c \\in R$ the function $f$ is differentiable in the point $x$, and  \n",
+    "2. **Differential of constant multiple**  \n",
+    "Let $f$ is differentiable in the point $x$. Then for any number $c \\in R$ the function $f$ is differentiable in the point $x$, and  \n",
     "$d_{x}(c f)=c \\cdot d_{x} f$  \n",
-    "3. Differential of a sum. Let $f$ and $g$ are differentiable in the point $x$. Then the function $f+g$ are differentiable in the point $x$, and   \n",
-    "$d_{x}(f+g)=d_{x} f+d_{x} g$"
+    "3. **Differential of a sum.**  \n",
+    "Let $f$ and $g$ are differentiable in the point $x$. Then the function $f+g$ are differentiable in the point $x$, and   \n",
+    "$d_{x}(f+g)=d_{x} f+d_{x} g$  \n",
+    "4. **Differential of product.**  \n",
+    "Let $f$ and $g$ are differentiable in the point $x$. Then the function $f \\cdot g$ is differentiable in the point $x$, and  \n",
+    "$d_{x}(f \\cdot g)=f(x) \\cdot d_{x} g+g(x) \\cdot d_{x} f .$  \n",
+    "NB, that in this equation $f(x)$ and $g(x)$ are numbers, because the point $x$ is fixed.  \n",
+    "5. **Differential of the quotient**.  \n",
+    "Let $f$ and $g$ are differentiable in the point $x$. Let $g$ is defined and is not equal zero in the neighbourhood of the point $x$. Then the function $\\frac{f}{g}$ is differentiable in the point $x$, and  \n",
+    "$d_{x}\\left(\\frac{f}{g}\\right)=\\frac{g(x) \\cdot d_{x} f-f(x) \\cdot d_{x} g}{g(x)^{2}}$.  \n",
+    "NB, that in this equation $f(x)$ and $g(x)$ are numbers, because the point $x$ is fixed.  \n",
+    "6. **Differential of the complex function**.  \n",
+    "Let $f$ is the function of one variable and $g$ is the function of $n$ variables. Then $f(g(x))$ is a function of $n$ variables. Let $g$ is differentiable in the point $x$ and there is derivative for $f$ in the point $g(x)$. Then function $f(g(x))$ is differentiable in the point $x$ and its differential is equal  \n",
+    "$f^{\\prime}(g(x)) \\cdot d_{x} g$.  \n",
+    "NB, that in this equation $f(g(x))$ is a number.\n",
+    "\n",
+    "\n"
    ]
   }
  ],
