add the first info about Partial Derivative

--- a/calculus/gradient_descent.ipynb
+++ b/calculus/gradient_descent.ipynb
@@ -94,6 +94,17 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Partial Derivative\n",
+    "Let be the function $f: \\mathbb{R}^{n} \\rightarrow \\mathbb{R}$ and the point $f: \\mathbb{R}^{n} \\rightarrow \\mathbb{R}$. Then $the Partial Derivative$ of the $k$-th coordinate is the limit  \n",
+    "$\\frac{\\partial f}{\\partial x_{k}}:=\\lim _{t \\rightarrow 0} \\frac{f\\left(x_{1}, \\ldots, x_{k}+\\Delta x_{k}, \\ldots, x_{n}\\right)-f\\left(x_{1}, \\ldots, x_{k}, \\ldots, x_{n}\\right)}{\\Delta x_{k}}$\n",
+    "When calculating of the Partial Derivative of $x_k$ it can be considered all the other variables in the formula as constants. In other words it can be considered as this algorithm:  \n",
+    "1. In the formulf for $f$\n"
+   ]
   }
  ],
  "metadata": {
