add the  info about Partial Derivative

--- a/calculus/gradient_descent.ipynb
+++ b/calculus/gradient_descent.ipynb
@@ -103,7 +103,11 @@
     "Let be the function $f: \\mathbb{R}^{n} \\rightarrow \\mathbb{R}$ and the point $f: \\mathbb{R}^{n} \\rightarrow \\mathbb{R}$. Then $the Partial Derivative$ of the $k$-th coordinate is the limit  \n",
     "$\\frac{\\partial f}{\\partial x_{k}}:=\\lim _{t \\rightarrow 0} \\frac{f\\left(x_{1}, \\ldots, x_{k}+\\Delta x_{k}, \\ldots, x_{n}\\right)-f\\left(x_{1}, \\ldots, x_{k}, \\ldots, x_{n}\\right)}{\\Delta x_{k}}$\n",
     "When calculating of the Partial Derivative of $x_k$ it can be considered all the other variables in the formula as constants. In other words it can be considered as this algorithm:  \n",
-    "1. In the formulf for $f$\n"
+    "1. In the formula for $f$ put the specific values for all the coordinates except $k$-th. that is we put the follwing $(n-1)$ values such as the first coordinate of the point $x$, the second coordinate of the point $x$ and so on, all the except $k$-th coordinate of the point $x$. The resulting function from one variable (from the variable $x_k$).  \n",
+    "2. Calculate the derivative from the resulting function from one variable.\n",
+    "3. Find the derivative in the specific point. That is put the $k$-th coordinate of the point $x$.\n",
+    "\n",
+    "\n"
    ]
   }
  ],
