add the info about Partial Derivative

--- a/calculus/gradient_descent.ipynb
+++ b/calculus/gradient_descent.ipynb
@@ -105,7 +105,9 @@
     "When calculating of the Partial Derivative of $x_k$ it can be considered all the other variables in the formula as constants. In other words it can be considered as this algorithm:  \n",
     "1. In the formula for $f$ put the specific values for all the coordinates except $k$-th. that is we put the follwing $(n-1)$ values such as the first coordinate of the point $x$, the second coordinate of the point $x$ and so on, all the except $k$-th coordinate of the point $x$. The resulting function from one variable (from the variable $x_k$).  \n",
     "2. Calculate the derivative from the resulting function from one variable.\n",
-    "3. Find the derivative in the specific point. That is put the $k$-th coordinate of the point $x$.\n",
+    "3. Find the derivative in the specific point. That is put the $k$-th coordinate of the point $x$.  \n",
+    "The obtained function in the Point #1 describes behaviour of the $f$ on the straight line, passing through the point $x$ and the parallel $k$-th coordinate axis. That is we fix all the coordinates except $k$-th and let it change only $k$-th coordinate. The obtained equation in the point #1 is called $limitation$ of the function $f$ to this straight line. Found Partial Derivative describes growth rate of the function $f$ along this straight line in the point $x$.  \n",
+    "\n",
     "\n",
     "\n"
    ]
