add the info about Partial Derivative

--- a/calculus/gradient_descent.ipynb
+++ b/calculus/gradient_descent.ipynb
@@ -107,9 +107,12 @@
     "2. Calculate the derivative from the resulting function from one variable.\n",
     "3. Find the derivative in the specific point. That is put the $k$-th coordinate of the point $x$.  \n",
     "The obtained function in the Point #1 describes behaviour of the $f$ on the straight line, passing through the point $x$ and the parallel $k$-th coordinate axis. That is we fix all the coordinates except $k$-th and let it change only $k$-th coordinate. The obtained equation in the point #1 is called $limitation$ of the function $f$ to this straight line. Found Partial Derivative describes growth rate of the function $f$ along this straight line in the point $x$.  \n",
-    "\n",
-    "\n",
-    "\n"
+    "**Theorem**.  \n",
+    "Let be a function $f$ from $n$ variables. Let be Differential of $f$ in the point $x$ $d_{x} f\\left(\\Delta x_{1}, \\ldots, \\Delta x_{n}\\right)=$ $a_{1} \\Delta x_{1}+\\cdots+a_{n} \\Delta x_{n}$ and partial derivatives $\\frac{\\partial f}{\\partial x_{1}}, \\ldots, \\frac{\\partial f}{\\partial x_{n}}$. Then  \n",
+    "$a_{1}=\\frac{\\partial f}{\\partial x_{1}}, \\ldots, a_{n}=\\frac{\\partial f}{\\partial x_{n}} .$  \n",
+    "That is for any $j=1,...,n$ value $a_j$ is equal partial derivative of function $f$ of $j$-th coordinate calculated in the point $x$. In other words:  \n",
+    "$d_{x} f\\left(\\Delta x_{1}, \\ldots, \\Delta x_{n}\\right)=\\frac{\\partial f}{\\partial x_{1}} \\Delta x_{1}+\\frac{\\partial f}{\\partial x_{2}} \\Delta x_{2}+\\cdots+\\frac{\\partial f}{\\partial x_{n}} \\Delta x_{n}$,  \n",
+    "where all the partial derivatives are calculated in the point $x$."
    ]
   }
  ],
